Initial commit: Setup audio logger project with frontend and backend structure

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,8 @@
 PORT=3001
 MONGODB_URI=mongodb://localhost:27017/audio-logger
+LM_STUDIO_URL=http://localhost:1234/v1
+LOCAL_AI_URL=http://localhost:8080/v1
+LLM_MODEL_NAME=deepseek-r1
+FALLBACK_MODEL_NAME=phi-4
+LOG_LEVEL=info
+QUEUE_CONNECTION=redis://localhost:6379
