--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.8",
+    "typescript": "^5.7.3"
   }
 }
